// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`keyValueInput > renders correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_1_"
          aria-describedby="_r_1_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders correctly with selectInput 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_1c_"
          aria-describedby="_r_1c_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_3_"
          aria-describedby="_r_3_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_true__e1wcoe2 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            disabled=""
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkzr"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders readOnly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_5_"
          aria-describedby="_r_5_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_true__e1wcoe2 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            disabled=""
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz2 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkzr"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders size large correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_b_"
          aria-describedby="_r_b_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders size medium correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_9_"
          aria-describedby="_r_9_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_medium__e1wcoef styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders size small correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_7_"
          aria-describedby="_r_7_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_small__e1wcoeg styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > renders with maxSize 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511 styles_gap_1rem_xxsmall__x6hyh52p"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_d_"
            >
              key
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_d_"
                name="key-value-input.0.key"
                type="text"
                value="key1"
              />
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_h_"
            >
              value
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="styles__q3q8049"
                data-size="large"
                id="_r_h_"
                name="key-value-input.0.value"
                type="text"
                value="value1"
              />
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-0"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                DeleteIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75C2.33579 4 2 4.33579 2 4.75C2 5.16421 2.33579 5.5 2.75 5.5H3.05L3.86493 13.6493C3.94161 14.4161 4.58685 15 5.35748 15H10.6425C11.4131 15 12.0584 14.4161 12.1351 13.6493L12.95 5.5H13.25C13.6642 5.5 14 5.16421 14 4.75C14 4.33579 13.6642 4 13.25 4H11V3.25C11 2.00736 9.99264 1 8.75 1H7.25C6.00736 1 5 2.00736 5 3.25ZM7.25 2.5C6.83579 2.5 6.5 2.83579 6.5 3.25V4H9.5V3.25C9.5 2.83579 9.16421 2.5 8.75 2.5H7.25ZM6.05044 6.00094C6.46413 5.98025 6.81627 6.29885 6.83696 6.71255L7.11195 12.2125C7.13264 12.6262 6.81404 12.9784 6.40034 12.9991C5.98665 13.0197 5.63451 12.7011 5.61383 12.2875L5.33883 6.78745C5.31814 6.37376 5.63674 6.02162 6.05044 6.00094ZM9.95034 6.00094C10.364 6.02162 10.6826 6.37376 10.662 6.78745L10.387 12.2875C10.3663 12.7011 10.0141 13.0197 9.60044 12.9991C9.18674 12.9784 8.86814 12.6262 8.88883 12.2125L9.16383 6.71255C9.18451 6.29885 9.53665 5.98025 9.95034 6.00094Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
        <div
          class="styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511 styles_gap_1rem_xxsmall__x6hyh52p"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_m_"
            >
              key
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_m_"
                name="key-value-input.1.key"
                type="text"
                value="key2"
              />
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_q_"
            >
              value
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="styles__q3q8049"
                data-size="large"
                id="_r_q_"
                name="key-value-input.1.value"
                type="text"
                value="value2"
              />
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-1"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                DeleteIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75C2.33579 4 2 4.33579 2 4.75C2 5.16421 2.33579 5.5 2.75 5.5H3.05L3.86493 13.6493C3.94161 14.4161 4.58685 15 5.35748 15H10.6425C11.4131 15 12.0584 14.4161 12.1351 13.6493L12.95 5.5H13.25C13.6642 5.5 14 5.16421 14 4.75C14 4.33579 13.6642 4 13.25 4H11V3.25C11 2.00736 9.99264 1 8.75 1H7.25C6.00736 1 5 2.00736 5 3.25ZM7.25 2.5C6.83579 2.5 6.5 2.83579 6.5 3.25V4H9.5V3.25C9.5 2.83579 9.16421 2.5 8.75 2.5H7.25ZM6.05044 6.00094C6.46413 5.98025 6.81627 6.29885 6.83696 6.71255L7.11195 12.2125C7.13264 12.6262 6.81404 12.9784 6.40034 12.9991C5.98665 13.0197 5.63451 12.7011 5.61383 12.2875L5.33883 6.78745C5.31814 6.37376 5.63674 6.02162 6.05044 6.00094ZM9.95034 6.00094C10.364 6.02162 10.6826 6.37376 10.662 6.78745L10.387 12.2875C10.3663 12.7011 10.0141 13.0197 9.60044 12.9991C9.18674 12.9784 8.86814 12.6262 8.88883 12.2125L9.16383 6.71255C9.18451 6.29885 9.53665 5.98025 9.95034 6.00094Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_v_"
          aria-describedby="_r_v_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_true__e1wcoe2 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            disabled=""
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > should correctly call onChange 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511 styles_gap_1rem_xxsmall__x6hyh52p"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_11_"
            >
              key
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_11_"
                name="name.0.key"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_15_"
            >
              value
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="styles__q3q8049"
                data-size="large"
                id="_r_15_"
                name="name.0.value"
                type="text"
                value=""
              />
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-0"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                DeleteIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75C2.33579 4 2 4.33579 2 4.75C2 5.16421 2.33579 5.5 2.75 5.5H3.05L3.86493 13.6493C3.94161 14.4161 4.58685 15 5.35748 15H10.6425C11.4131 15 12.0584 14.4161 12.1351 13.6493L12.95 5.5H13.25C13.6642 5.5 14 5.16421 14 4.75C14 4.33579 13.6642 4 13.25 4H11V3.25C11 2.00736 9.99264 1 8.75 1H7.25C6.00736 1 5 2.00736 5 3.25ZM7.25 2.5C6.83579 2.5 6.5 2.83579 6.5 3.25V4H9.5V3.25C9.5 2.83579 9.16421 2.5 8.75 2.5H7.25ZM6.05044 6.00094C6.46413 5.98025 6.81627 6.29885 6.83696 6.71255L7.11195 12.2125C7.13264 12.6262 6.81404 12.9784 6.40034 12.9991C5.98665 13.0197 5.63451 12.7011 5.61383 12.2875L5.33883 6.78745C5.31814 6.37376 5.63674 6.02162 6.05044 6.00094ZM9.95034 6.00094C10.364 6.02162 10.6826 6.37376 10.662 6.78745L10.387 12.2875C10.3663 12.7011 10.0141 13.0197 9.60044 12.9991C9.18674 12.9784 8.86814 12.6262 8.88883 12.2125L9.16383 6.71255C9.18451 6.29885 9.53665 5.98025 9.95034 6.00094Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_1a_"
          aria-describedby="_r_1a_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > should correctly call onChange when select 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511 styles_gap_1rem_xxsmall__x6hyh52p"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            aria-label="key-value-input.0.key"
            class="styles__uf6pag0"
          >
            <div
              aria-controls="_r_1g_"
              aria-describedby="_r_1g_"
              class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
              tabindex="-1"
            >
              <div
                class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              >
                <label
                  class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  for="_r_1e_"
                >
                  key
                </label>
                <div
                  aria-controls="_r_1g_"
                  aria-expanded="false"
                  aria-label="key"
                  class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                  data-disabled="false"
                  data-readonly="false"
                  data-testid="select-input-key-value-input.0.key"
                  id="_r_1e_"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="selectBar__r8qe4m style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  >
                    option-1
                  </span>
                  <div
                    class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        ArrowDownIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            aria-label="key-value-input.0.value"
            class="styles__uf6pag0"
          >
            <div
              aria-controls="_r_1n_"
              aria-describedby="_r_1n_"
              class="styles__w40vpo9 styles_fullWidth_true__w40vpob"
              tabindex="-1"
            >
              <div
                class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
              >
                <label
                  class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  for="_r_1l_"
                >
                  value
                </label>
                <div
                  aria-controls="_r_1n_"
                  aria-expanded="false"
                  aria-label="value"
                  class="selectBar__r8qe46 selectBar__r8qe45 selectBar_size_large__r8qe4a selectBar_state_neutral__r8qe4e"
                  data-disabled="false"
                  data-readonly="false"
                  data-testid="select-input-key-value-input.0.value"
                  id="_r_1l_"
                  role="combobox"
                  tabindex="0"
                >
                  <span
                    class="selectBar__r8qe4m style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_body__m4c9owj style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
                  >
                    option-2
                  </span>
                  <div
                    class="selectBar_large__r8qe42 styles__toi52u0 styles_alignItems_center_xxsmall__toi52ud styles_flexDirection_row_xxsmall__toi52u2j styles_gap_0.5rem_xxsmall__toi52u3p"
                  >
                    <svg
                      aria-label="show dropdown"
                      class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkz9 uv_icons_1sbwqkzg uv_icons_1sbwqkz1i"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                    >
                      <title>
                        ArrowDownIcon
                      </title>
                      <path
                        clip-rule="evenodd"
                        d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-0"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                DeleteIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75C2.33579 4 2 4.33579 2 4.75C2 5.16421 2.33579 5.5 2.75 5.5H3.05L3.86493 13.6493C3.94161 14.4161 4.58685 15 5.35748 15H10.6425C11.4131 15 12.0584 14.4161 12.1351 13.6493L12.95 5.5H13.25C13.6642 5.5 14 5.16421 14 4.75C14 4.33579 13.6642 4 13.25 4H11V3.25C11 2.00736 9.99264 1 8.75 1H7.25C6.00736 1 5 2.00736 5 3.25ZM7.25 2.5C6.83579 2.5 6.5 2.83579 6.5 3.25V4H9.5V3.25C9.5 2.83579 9.16421 2.5 8.75 2.5H7.25ZM6.05044 6.00094C6.46413 5.98025 6.81627 6.29885 6.83696 6.71255L7.11195 12.2125C7.13264 12.6262 6.81404 12.9784 6.40034 12.9991C5.98665 13.0197 5.63451 12.7011 5.61383 12.2875L5.33883 6.78745C5.31814 6.37376 5.63674 6.02162 6.05044 6.00094ZM9.95034 6.00094C10.364 6.02162 10.6826 6.37376 10.662 6.78745L10.387 12.2875C10.3663 12.7011 10.0141 13.0197 9.60044 12.9991C9.18674 12.9784 8.86814 12.6262 8.88883 12.2125L9.16383 6.71255C9.18451 6.29885 9.53665 5.98025 9.95034 6.00094Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_1t_"
          aria-describedby="_r_1t_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > should work when adding a line 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511 styles_gap_1rem_xxsmall__x6hyh52p"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_29_"
            >
              key
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_29_"
                name="key-value-input.0.key"
                type="text"
                value="key1"
              />
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_2d_"
            >
              value
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="styles__q3q8049"
                data-size="large"
                id="_r_2d_"
                name="key-value-input.0.value"
                type="text"
                value="value1"
              />
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-0"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                DeleteIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75C2.33579 4 2 4.33579 2 4.75C2 5.16421 2.33579 5.5 2.75 5.5H3.05L3.86493 13.6493C3.94161 14.4161 4.58685 15 5.35748 15H10.6425C11.4131 15 12.0584 14.4161 12.1351 13.6493L12.95 5.5H13.25C13.6642 5.5 14 5.16421 14 4.75C14 4.33579 13.6642 4 13.25 4H11V3.25C11 2.00736 9.99264 1 8.75 1H7.25C6.00736 1 5 2.00736 5 3.25ZM7.25 2.5C6.83579 2.5 6.5 2.83579 6.5 3.25V4H9.5V3.25C9.5 2.83579 9.16421 2.5 8.75 2.5H7.25ZM6.05044 6.00094C6.46413 5.98025 6.81627 6.29885 6.83696 6.71255L7.11195 12.2125C7.13264 12.6262 6.81404 12.9784 6.40034 12.9991C5.98665 13.0197 5.63451 12.7011 5.61383 12.2875L5.33883 6.78745C5.31814 6.37376 5.63674 6.02162 6.05044 6.00094ZM9.95034 6.00094C10.364 6.02162 10.6826 6.37376 10.662 6.78745L10.387 12.2875C10.3663 12.7011 10.0141 13.0197 9.60044 12.9991C9.18674 12.9784 8.86814 12.6262 8.88883 12.2125L9.16383 6.71255C9.18451 6.29885 9.53665 5.98025 9.95034 6.00094Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_2i_"
          aria-describedby="_r_2i_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`keyValueInput > should work when removing a line 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <div
      class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
    >
      <div
        class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_1.5rem_xxsmall__toi52u41"
      >
        <div
          class="styles__x6hyh50 styles_alignItems_flex-end_xxsmall__x6hyh511 styles_gap_1rem_xxsmall__x6hyh52p"
          style="--_3mg8xe0: 1fr 1fr auto; --_3mg8xe1: 1fr 1fr auto; --_3mg8xe2: 1fr 1fr auto; --_3mg8xe3: 1fr 1fr auto; --_3mg8xe4: 1fr 1fr auto; --_3mg8xe5: 1fr 1fr auto;"
        >
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_2k_"
            >
              key
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                class="styles__q3q8049"
                data-size="large"
                id="_r_2k_"
                name="key-value-input.0.key"
                type="text"
                value="key1"
              />
            </div>
          </div>
          <div
            class="styles__toi52u0 styles_flexDirection_column_xxsmall__toi52u2d styles_gap_0.25rem_xxsmall__toi52u5j"
          >
            <label
              class="styles_htmlFor__17td3g92 style__m4c9ow0 style_prominence_default__m4c9ow4 style_sentiment_neutral__m4c9owb style_variant_bodyStrong__m4c9own style_undefined_compound_0__m4c9ow1a style_undefined_compound_64__m4c9ow32"
              for="_r_2o_"
            >
              value
            </label>
            <div
              class="styles__q3q8048 styles_large__q3q8045"
              data-disabled="false"
              data-error="false"
              data-readonly="false"
              data-success="false"
            >
              <input
                aria-invalid="false"
                autocomplete="off"
                class="styles__q3q8049"
                data-size="large"
                id="_r_2o_"
                name="key-value-input.0.value"
                type="text"
                value="value1"
              />
            </div>
          </div>
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_danger__e1wcoe6 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_11__e1wcoew"
            data-testid="remove-button-0"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                DeleteIcon
              </title>
              <path
                clip-rule="evenodd"
                d="M5 3.25V4H2.75C2.33579 4 2 4.33579 2 4.75C2 5.16421 2.33579 5.5 2.75 5.5H3.05L3.86493 13.6493C3.94161 14.4161 4.58685 15 5.35748 15H10.6425C11.4131 15 12.0584 14.4161 12.1351 13.6493L12.95 5.5H13.25C13.6642 5.5 14 5.16421 14 4.75C14 4.33579 13.6642 4 13.25 4H11V3.25C11 2.00736 9.99264 1 8.75 1H7.25C6.00736 1 5 2.00736 5 3.25ZM7.25 2.5C6.83579 2.5 6.5 2.83579 6.5 3.25V4H9.5V3.25C9.5 2.83579 9.16421 2.5 8.75 2.5H7.25ZM6.05044 6.00094C6.46413 5.98025 6.81627 6.29885 6.83696 6.71255L7.11195 12.2125C7.13264 12.6262 6.81404 12.9784 6.40034 12.9991C5.98665 13.0197 5.63451 12.7011 5.61383 12.2875L5.33883 6.78745C5.31814 6.37376 5.63674 6.02162 6.05044 6.00094ZM9.95034 6.00094C10.364 6.02162 10.6826 6.37376 10.662 6.78745L10.387 12.2875C10.3663 12.7011 10.0141 13.0197 9.60044 12.9991C9.18674 12.9784 8.86814 12.6262 8.88883 12.2125L9.16383 6.71255C9.18451 6.29885 9.53665 5.98025 9.95034 6.00094Z"
                fill-rule="evenodd"
              />
            </svg>
          </button>
        </div>
      </div>
      <div
        class="styles__toi52u0 styles_flexDirection_row_xxsmall__toi52u2j styles_justifyContent_flex-start_xxsmall__toi52u6j"
      >
        <div
          aria-controls="_r_2t_"
          aria-describedby="_r_2t_"
          class="styles__w40vpo9"
          tabindex="0"
        >
          <button
            class="styles__e1wcoe0 styles_disabled_false__e1wcoe1 styles_fullWidth_false__e1wcoe3 styles_sentiment_primary__e1wcoe9 styles_size_large__e1wcoee styles_variant_outlined__e1wcoek styles_undefined_compound_9__e1wcoeu"
            data-testid="add-button"
            type="button"
          >
            <svg
              class="uv_icons_1sbwqkz0 uv_icons_1sbwqkz1 uv_icons_1sbwqkz3 uv_icons_1sbwqkzg uv_icons_1sbwqkz1n"
              height="16"
              viewBox="0 0 16 16"
              width="16"
            >
              <title>
                PlusIcon
              </title>
              <path
                d="M8.75 3.75a.75.75 0 0 0-1.5 0v3.5h-3.5a.75.75 0 0 0 0 1.5h3.5v3.5a.75.75 0 0 0 1.5 0v-3.5h3.5a.75.75 0 0 0 0-1.5h-3.5z"
              />
            </svg>
            add
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
